--- a/Demos/Buttons/Wisej.DemoBrowser.SplitButton/Features.resx
+++ b/Demos/Buttons/Wisej.DemoBrowser.SplitButton/Features.resx
@@ -125,8 +125,8 @@
         NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQMAAAAETmFtZQMkQWQI
         TG9jYXRpb24BBAQYU3lzdGVtLkRyYXdpbmcuUmVjdGFuZ2xlAwAAABRTeXN0ZW0uRHJhd2luZy5Qb2lu
         dAMAAAACAAAABgQAAAAFUGhvbmUF+////xhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUEAAAAAXgBeQV3
-        aWR0aAZoZWlnaHQAAAAACAgICAMAAAAmAQAA8P///14AAADN////Bfr///8UU3lzdGVtLkRyYXdpbmcu
-        UG9pbnQCAAAAAXgBeQAACAgDAAAAEAAAALACAAAL
+        aWR0aAZoZWlnaHQAAAAACAgICAMAAABIAgAAWwEAAIABAAA4AQAABfr///8UU3lzdGVtLkRyYXdpbmcu
+        UG9pbnQCAAAAAXgBeQAACAgDAAAAEAAAAGEBAAAL
 </value>
   </data>
   <data name="splitButtonCities.ResponsiveProfiles1" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -149,8 +149,8 @@
         NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQMAAAAETmFtZQMkQWQI
         TG9jYXRpb24BBAQYU3lzdGVtLkRyYXdpbmcuUmVjdGFuZ2xlAwAAABRTeXN0ZW0uRHJhd2luZy5Qb2lu
         dAMAAAACAAAABgQAAAAFUGhvbmUF+////xhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUEAAAAAXgBeQV3
-        aWR0aAZoZWlnaHQAAAAACAgICAMAAAAmAQAAMwAAAF4AAAAQAAAABfr///8UU3lzdGVtLkRyYXdpbmcu
-        UG9pbnQCAAAAAXgBeQAACAgDAAAAEAAAAG0CAAAL
+        aWR0aAZoZWlnaHQAAAAACAgICAMAAABgAQAAqQEAAJgAAACGAQAABfr///8UU3lzdGVtLkRyYXdpbmcu
+        UG9pbnQCAAAAAXgBeQAACAgDAAAA+AAAABMBAAAL
 </value>
   </data>
   <data name="splitButtonHtml.ResponsiveProfiles1" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -173,8 +173,8 @@
         NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQMAAAAETmFtZQMkQWQI
         TG9jYXRpb24BBAQYU3lzdGVtLkRyYXdpbmcuUmVjdGFuZ2xlAwAAABRTeXN0ZW0uRHJhd2luZy5Qb2lu
         dAMAAAACAAAABgQAAAAFUGhvbmUF+////xhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUEAAAAAXgBeQV3
-        aWR0aAZoZWlnaHQAAAAACAgICAMAAAAmAQAAiwAAAF4AAABTAAAABfr///8UU3lzdGVtLkRyYXdpbmcu
-        UG9pbnQCAAAAAXgBeQAACAgDAAAAEAAAABUCAAAL
+        aWR0aAZoZWlnaHQAAAAACAgICAMAAABIAgAAswEAAIABAAB7AQAABfr///8UU3lzdGVtLkRyYXdpbmcu
+        UG9pbnQCAAAAAXgBeQAACAgDAAAAEAAAAAkBAAAL
 </value>
   </data>
   <data name="splitButton2.ResponsiveProfiles1" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -197,8 +197,8 @@
         NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQMAAAAETmFtZQMkQWQI
         TG9jYXRpb24BBAQYU3lzdGVtLkRyYXdpbmcuUmVjdGFuZ2xlAwAAABRTeXN0ZW0uRHJhd2luZy5Qb2lu
         dAMAAAACAAAABgQAAAAFUGhvbmUF+////xhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUEAAAAAXgBeQV3
-        aWR0aAZoZWlnaHQAAAAACAgICAMAAAAmAQAAzgAAAF4AAACrAAAABfr///8UU3lzdGVtLkRyYXdpbmcu
-        UG9pbnQCAAAAAXgBeQAACAgDAAAAEAAAANIBAAAL
+        aWR0aAZoZWlnaHQAAAAACAgICAMAAABgAQAA9gEAAJgAAADTAQAABfr///8UU3lzdGVtLkRyYXdpbmcu
+        UG9pbnQCAAAAAXgBeQAACAgDAAAA+AAAAMYAAAAL
 </value>
   </data>
   <data name="splitButtonRepeat.ResponsiveProfiles1" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -221,8 +221,8 @@
         NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQMAAAAETmFtZQMkQWQI
         TG9jYXRpb24BBAQYU3lzdGVtLkRyYXdpbmcuUmVjdGFuZ2xlAwAAABRTeXN0ZW0uRHJhd2luZy5Qb2lu
         dAMAAAACAAAABgQAAAAFUGhvbmUF+////xhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUEAAAAAXgBeQV3
-        aWR0aAZoZWlnaHQAAAAACAgICAMAAAAmAQAAEQEAAF4AAADuAAAABfr///8UU3lzdGVtLkRyYXdpbmcu
-        UG9pbnQCAAAAAXgBeQAACAgDAAAAEAAAAI8BAAAL
+        aWR0aAZoZWlnaHQAAAAACAgICAMAAABIAgAA9gEAAIABAADTAQAABfr///8UU3lzdGVtLkRyYXdpbmcu
+        UG9pbnQCAAAAAXgBeQAACAgDAAAAEAAAAMYAAAAL
 </value>
   </data>
   <data name="splitButton3.ResponsiveProfiles1" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -245,8 +245,8 @@
         NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQMAAAAETmFtZQMkQWQI
         TG9jYXRpb24BBAQYU3lzdGVtLkRyYXdpbmcuUmVjdGFuZ2xlAwAAABRTeXN0ZW0uRHJhd2luZy5Qb2lu
         dAMAAAACAAAABgQAAAAFUGhvbmUF+////xhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUEAAAAAXgBeQV3
-        aWR0aAZoZWlnaHQAAAAACAgICAMAAAAmAQAAVAEAAPcAAAAxAQAABfr///8UU3lzdGVtLkRyYXdpbmcu
-        UG9pbnQCAAAAAXgBeQAACAgDAAAAEAAAAEwBAAAL
+        aWR0aAZoZWlnaHQAAAAACAgICAMAAAB4AAAARQIAAEkAAAAiAgAABfr///8UU3lzdGVtLkRyYXdpbmcu
+        UG9pbnQCAAAAAXgBeQAACAgDAAAA4AEAAHcAAAAL
 </value>
   </data>
   <data name="splitButton4.ResponsiveProfiles1" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -269,8 +269,8 @@
         NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQMAAAAETmFtZQMkQWQI
         TG9jYXRpb24BBAQYU3lzdGVtLkRyYXdpbmcuUmVjdGFuZ2xlAwAAABRTeXN0ZW0uRHJhd2luZy5Qb2lu
         dAMAAAACAAAABgQAAAAFUGhvbmUF+////xhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUEAAAAAXgBeQV3
-        aWR0aAZoZWlnaHQAAAAACAgICAMAAAC1AQAAowAAAO0AAABoAAAABfr///8UU3lzdGVtLkRyYXdpbmcu
-        UG9pbnQCAAAAAXgBeQAACAgDAAAAEAAAAPEAAAAL
+        aWR0aAZoZWlnaHQAAAAACAgICAMAAADmAAAABQIAAB4AAADKAQAABfr///8UU3lzdGVtLkRyYXdpbmcu
+        UG9pbnQCAAAAAXgBeQAACAgDAAAA+AAAAGsAAAAL
 </value>
   </data>
   <data name="splitButton6.ResponsiveProfiles1" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -293,8 +293,8 @@
         NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQMAAAAETmFtZQMkQWQI
         TG9jYXRpb24BBAQYU3lzdGVtLkRyYXdpbmcuUmVjdGFuZ2xlAwAAABRTeXN0ZW0uRHJhd2luZy5Qb2lu
         dAMAAAACAAAABgQAAAAFUGhvbmUF+////xhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUEAAAAAXgBeQV3
-        aWR0aAZoZWlnaHQAAAAACAgICAMAAAC1AQAA5gAAAO0AAADDAAAABfr///8UU3lzdGVtLkRyYXdpbmcu
-        UG9pbnQCAAAAAXgBeQAACAgDAAAAEAAAAK4AAAAL
+        aWR0aAZoZWlnaHQAAAAACAgICAMAAADOAQAA+QEAAAYBAADWAQAABfr///8UU3lzdGVtLkRyYXdpbmcu
+        UG9pbnQCAAAAAXgBeQAACAgDAAAAEAAAAHcAAAAL
 </value>
   </data>
   <data name="splitButton7.ResponsiveProfiles1" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -317,8 +317,8 @@
         NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQMAAAAETmFtZQMkQWQI
         TG9jYXRpb24BBAQYU3lzdGVtLkRyYXdpbmcuUmVjdGFuZ2xlAwAAABRTeXN0ZW0uRHJhd2luZy5Qb2lu
         dAMAAAACAAAABgQAAAAFUGhvbmUF+////xhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUEAAAAAXgBeQV3
-        aWR0aAZoZWlnaHQAAAAACAgICAMAAADYAAAAkAIAABAAAABVAgAABfr///8UU3lzdGVtLkRyYXdpbmcu
-        UG9pbnQCAAAAAXgBeQAACAgDAAAAEAAAAFMAAAAL
+        aWR0aAZoZWlnaHQAAAAACAgICAMAAADmAAAAYAIAAB4AAAAlAgAABfr///8UU3lzdGVtLkRyYXdpbmcu
+        UG9pbnQCAAAAAXgBeQAACAgDAAAA+AAAABAAAAAL
 </value>
   </data>
   <data name="splitButton9.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -329,26 +329,28 @@
         NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQMAAAAETmFtZQMkQWQI
         TG9jYXRpb24BBAQYU3lzdGVtLkRyYXdpbmcuUmVjdGFuZ2xlAwAAABRTeXN0ZW0uRHJhd2luZy5Qb2lu
         dAMAAAACAAAABgQAAAAFUGhvbmUF+////xhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUEAAAAAXgBeQV3
-        aWR0aAZoZWlnaHQAAAAACAgICAMAAADYAAAA0wIAABAAAACwAgAABfr///8UU3lzdGVtLkRyYXdpbmcu
-        UG9pbnQCAAAAAXgBeQAACAgDAAAAEAAAABAAAAAL
+        aWR0aAZoZWlnaHQAAAAACAgICAMAAADOAQAAVAIAAAYBAAAxAgAABfr///8UU3lzdGVtLkRyYXdpbmcu
+        UG9pbnQCAAAAAXgBeQAACAgDAAAAEAAAABwAAAAL
 </value>
   </data>
-  <data name="flowLayoutPanel1.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
+  <data name="flowLayoutPanelButtons.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
         dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
         YXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNm
-        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQUAAAAETmFtZQMkQWQE
-        U2l6ZQhMb2NhdGlvbgZBbmNob3IBBAQEBBhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUDAAAAE1N5c3Rl
-        bS5EcmF3aW5nLlNpemUDAAAAFFN5c3RlbS5EcmF3aW5nLlBvaW50AwAAABZXaXNlai5XZWIuQW5jaG9y
-        U3R5bGVzAgAAAAIAAAAGBAAAAAVQaG9uZQX7////GFN5c3RlbS5EcmF3aW5nLlJlY3RhbmdsZQQAAAAB
-        eAF5BXdpZHRoBmhlaWdodAAAAAAICAgIAwAAACQBAAAIAwAAPAAAACUAAAAF+v///xNTeXN0ZW0uRHJh
-        d2luZy5TaXplAgAAAAV3aWR0aAZoZWlnaHQAAAgIAwAAAOgAAADjAgAABfn///8UU3lzdGVtLkRyYXdp
-        bmcuUG9pbnQCAAAAAXgBeQAACAgDAAAAPgAAACcAAAAF+P///xZXaXNlai5XZWIuQW5jaG9yU3R5bGVz
-        AQAAAAd2YWx1ZV9fAAgCAAAADwAAAAs=
+        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQcAAAAETmFtZRBBdXRv
+        U2Nyb2xsTWFyZ2luBFNpemUITG9jYXRpb24GQW5jaG9yBERvY2sKU2Nyb2xsQmFycwEEBAQEBAQTU3lz
+        dGVtLkRyYXdpbmcuU2l6ZQMAAAATU3lzdGVtLkRyYXdpbmcuU2l6ZQMAAAAUU3lzdGVtLkRyYXdpbmcu
+        UG9pbnQDAAAAFldpc2VqLldlYi5BbmNob3JTdHlsZXMCAAAAE1dpc2VqLldlYi5Eb2NrU3R5bGUCAAAA
+        FFdpc2VqLldlYi5TY3JvbGxCYXJzAgAAAAIAAAAGBAAAAAVQaG9uZQX7////E1N5c3RlbS5EcmF3aW5n
+        LlNpemUCAAAABXdpZHRoBmhlaWdodAAACAgDAAAAAAAAABQAAAAB+v////v///9YAgAAvAIAAAX5////
+        FFN5c3RlbS5EcmF3aW5nLlBvaW50AgAAAAF4AXkAAAgIAwAAAAAAAAAAAAAABfj///8WV2lzZWouV2Vi
+        LkFuY2hvclN0eWxlcwEAAAAHdmFsdWVfXwAIAgAAAA8AAAAF9////xNXaXNlai5XZWIuRG9ja1N0eWxl
+        AQAAAAd2YWx1ZV9fAAgCAAAABQAAAAX2////FFdpc2VqLldlYi5TY3JvbGxCYXJzAQAAAAd2YWx1ZV9f
+        AAgCAAAABAAAAAs=
 </value>
   </data>
-  <data name="flowLayoutPanel1.ResponsiveProfiles1" mimetype="application/x-microsoft.net.object.binary.base64">
+  <data name="flowLayoutPanelButtons.ResponsiveProfiles1" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
         dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
@@ -370,26 +372,4 @@
         U3lzdGVtLkRyYXdpbmcuUG9pbnQCAAAACw==
 </value>
   </metadata>
-  <data name="$this.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
-        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
-        YXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNm
-        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQMAAAAETmFtZQRTaXpl
-        CExvY2F0aW9uAQQEE1N5c3RlbS5EcmF3aW5nLlNpemUDAAAAFFN5c3RlbS5EcmF3aW5nLlBvaW50AwAA
-        AAIAAAAGBAAAAAVQaG9uZQX7////E1N5c3RlbS5EcmF3aW5nLlNpemUCAAAABXdpZHRoBmhlaWdodAAA
-        CAgDAAAAYgEAAC8DAAAF+v///xRTeXN0ZW0uRHJhd2luZy5Qb2ludAIAAAABeAF5AAAICAMAAAAZAAAA
-        uP///ws=
-</value>
-  </data>
-  <data name="$this.ResponsiveProfiles1" mimetype="application/x-microsoft.net.object.binary.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
-        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
-        YXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNm
-        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQIAAAAETmFtZQRTaXpl
-        AQQTU3lzdGVtLkRyYXdpbmcuU2l6ZQMAAAACAAAABgQAAAAGVGFibGV0Bfv///8TU3lzdGVtLkRyYXdp
-        bmcuU2l6ZQIAAAAFd2lkdGgGaGVpZ2h0AAAICAMAAAArBAAA2gEAAAs=
-</value>
-  </data>
 </root>
