--- a/Demos/Buttons/Wisej.DemoBrowser.RadioButton/Features.resx
+++ b/Demos/Buttons/Wisej.DemoBrowser.RadioButton/Features.resx
@@ -287,7 +287,7 @@
         AQAAyQAAAAX5////FFN5c3RlbS5EcmF3aW5nLlBvaW50AgAAAAF4AXkAAAgIAwAAADwBAAAQAAAACw==
 </value>
   </data>
-  <data name="flowLayoutPanelRadioButtons.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
+  <data name="flowLayoutPanelMain.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
         dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
