--- a/Demos/Buttons/Wisej.DemoBrowser.SplitButton/Features.resx
+++ b/Demos/Buttons/Wisej.DemoBrowser.SplitButton/Features.resx
@@ -333,7 +333,7 @@
         UG9pbnQCAAAAAXgBeQAACAgDAAAAEAAAABwAAAAL
 </value>
   </data>
-  <data name="flowLayoutPanelButtons.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
+  <data name="flowLayoutPanelMain.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
         dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
@@ -350,7 +350,7 @@
         AAgCAAAABAAAAAs=
 </value>
   </data>
-  <data name="flowLayoutPanelButtons.ResponsiveProfiles1" mimetype="application/x-microsoft.net.object.binary.base64">
+  <data name="flowLayoutPanelMain.ResponsiveProfiles1" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
         dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
